--- a/package.json
+++ b/package.json
@@ -2,6 +2,7 @@
   "name": "semantic",
   "version": "0.1.0",
   "private": true,
+  "homepage": "https://SantiagoPapa14.github.io/semantic",
   "scripts": {
   "dev": "next dev",
   "build": "next build",
