--- a/package.json
+++ b/package.json
@@ -4,18 +4,22 @@
   "private": true,
   "homepage": "https://SantiagoPapa14.github.io/semantic",
   "scripts": {
-  "dev": "next dev",
-  "build": "next build",
-  "start": "next start",
-  "lint": "next lint",
-  "deploy": "gh-pages -d out",
-  "predeploy": "npm run build"
-},
+    "dev": "next dev",
+    "build": "next build",
+    "start": "next start",
+    "lint": "next lint",
+    "deploy": "gh-pages -d out",
+    "predeploy": "npm run build"
+  },
   "dependencies": {
+    "@radix-ui/react-accordion": "^1.2.8",
+    "class-variance-authority": "^0.7.1",
+    "clsx": "^2.1.1",
     "lucide-react": "^0.477.0",
     "next": "15.2.1",
     "react": "^19.0.0",
-    "react-dom": "^19.0.0"
+    "react-dom": "^19.0.0",
+    "tailwind-merge": "^3.2.0"
   },
   "devDependencies": {
     "@eslint/eslintrc": "^3",
@@ -28,6 +32,7 @@
     "gh-pages": "^6.3.0",
     "postcss": "^8.5.3",
     "tailwindcss": "^4.0.9",
+    "tw-animate-css": "^1.2.8",
     "typescript": "^5"
   }
 }
